Fixed the message overlaping issue in apply leave

--- a/php/orangehrm/symfony/plugins/orangehrmCoreLeavePlugin/web/css/applyLeaveSuccess.css
+++ b/php/orangehrm/symfony/plugins/orangehrmCoreLeavePlugin/web/css/applyLeaveSuccess.css
@@ -42,6 +42,7 @@ div#applyleave_leaveBalance {
 }
 
 div.error {
+	padding-top: 7px;
     padding-left: 140px !important;
 }
 
